v 1.0.1 fix a few padding and margin issues. increase clock font size on mobile

--- a/resources/css/about.css
+++ b/resources/css/about.css
@@ -49,6 +49,7 @@ div > .card {
 	}
 	div .container {
 		width: 100%;
+		margin: auto 5%;
 	}
 }
 .btn-info {
