--- a/resources/css/homework.css
+++ b/resources/css/homework.css
@@ -1,3 +1,6 @@
+h1, h2 {
+    text-align: center;
+}
 p {
 	font-weight: 400;
 }
@@ -5,7 +8,6 @@ p {
 	width: 32%;
 	border: 1px solid #00B1B2;
 	box-shadow: 0 2px 4px 0;
-	margin: 10px;
 	padding: 15px;
     display: inline-block;
     margin: 10px auto;
@@ -20,7 +22,7 @@ p {
 @media(max-width: 768px) {
     .content {
         width: 95%;
-        margin-left: 13px;
+        margin-left: 2.5%;
     }
 }
 a:hover {
@@ -57,7 +59,7 @@ a:hover {
 }
 @media (max-width: 410px) {
     #clockdiv {
-        font-size: 15px;
+        font-size: 18px;
     }
 }
 @media (min-width: 600px) {
@@ -94,7 +96,7 @@ a:hover {
 
 .smalltext{
     padding-top: 5px;
-    font-size: 16px;
+    font-size: 18px;
 }
 /*******************
 * clock styles end *
